# Tjimi

./: .gitignore  CLAUDE.md  README.md  check_database.py  gemini.md  package-lock.json  package.json  test_api.py  test_gemini_proxy.py  test_proxy.py  vite.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_key.rs  auth.rs  custom_auth.rs  logs.rs  mod.rs  settings.rs  window.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/models/: api_key.rs  mod.rs  request_log.rs  user.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: gemini.rs  health.rs  mod.rs
src-tauri/src/server/middleware/: custom_auth.rs  mod.rs
src-tauri/src/services/: api_key.rs  auth.rs  custom_auth.rs  error_logger.rs  gemini_proxy.rs  key_rotation.rs  mod.rs  settings.rs
src/assets/styles/: base.css  variables.css
src/components/: Layout.vue  TestApiKey.vue
src/components/apiKeys/: ApiKeyCard.vue  ApiKeyForm.vue  ApiKeyStats.vue
src/components/layout/: AppLayout.vue
src/components/mobile/: MobileApiKeyCard.vue  MobileLogs.vue  MobilePagination.vue  MobileSettings.vue  MobileStats.vue
src/composables/: useForm.js  useLoading.js  useModal.js  usePagination.js  usePlatform.js  useResponsive.js
src/router/: index.js
src/stores/: apiKeys.js  auth.js  logs.js  settings.js
src/utils/: constants.js  helpers.js  validation.js
src/views/: ApiKeys.vue  Home.vue  Login.vue  Logs.vue  Settings.vue
(+49 files in other folders)
